# sttcli

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
src/sttcli/: audio.py  benchmark.py  cli.py  config.py  gender.py  models.py  progress.py
src/sttcli/formatters/: __init__.py  base.py  html_compare.py  json_fmt.py  markdown.py  srt.py  text.py
src/sttcli/providers/: __init__.py  base.py  elevenlabs.py  gemini.py  openai_api.py  whisper_local.py
